# my_code

./: README.md
c++/Tinyhttpd/: a.out  client  httpd  httpd.c  request.py  simpleclient.c  tmp.cpp
c++/boost/boost_python/test1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  embedding  embedding.cc
c++/boost/boost_python/test2/: Makefile  README.md  test2.cpp
c++/boost/boost_python/test3/: Makefile  a.cpp  test.py  test3.cpp
c++/boost/function/: CMakeLists.txt  function1.cpp  function2.cpp  function3.cpp
c++/boost/stringOperation/: CMakeLists.txt  string_test1.cpp
c++/boost/thread/: CMakeLists.txt  thread_test1.cpp  thread_test2.cpp  thread_test3.cpp  thread_test4.cpp
c++/data_structure/: CMakeLists.txt
c++/data_structure/src/: README.md  braceMatch.cpp  doubleLinkCircleList.cpp  doubleLinkList.cpp  josephus_problem.cpp  singleLinkCircleList.cpp  singleLinkList.cpp  singleLinkLoopList.cpp  sort1.cpp  unary_polynomials.cpp
c++/gflags/: Makefile  gflag_test  gflag_test.cpp
c++/glog/: Makefile  glog_test  glog_test.cpp
c++/opencv/: CMakeLists.txt
c++/opencv/include/: operation.hpp
c++/opencv/src/: operation.cpp  test2.cpp  testRotateRect.cpp
c++/protobuf/: Makefile  a  add_person.cpp  addressbook.proto  get_param_from_proto.cpp  list_people.cpp  solver.prototxt  test_addressbook.cpp
c++/sigaction/: CMakeLists.txt
c++/sigaction/src/: test1.cpp  test2.cpp
c++/static/: CMakeLists.txt
c++/static/src/: test1.cpp  test2.cpp
c++/stl/: CMakeLists.txt
c++/stl/src/: a.out  conversion.cpp  hash_map1.cpp  hash_map2.cpp  map1.cpp  set1.cpp  test_func_obj.cpp  v1.cpp
caffe_code/: cal_roc_t.py  check_params.py  create_caffe_prototxt.py  create_caffe_solver.py  extract_feature.py  imageBatch.py  mnist_test.py  readLmdbData.py  readme  test.py
caffe_code/prototxts/: shuffle.py
caffe_code/test_c++/: Makefile  blob_demo  blob_demo.cpp
caffe_code/train/: Makefile  change_mean.py  classification.cpp  create_lmdb.sh  mean.sh  test_c++.sh
cpp/include/: out.h
cpp/src/: .time.cpp.swp  10.17.cpp  2-dimensional-array.cpp  2.10.cpp  2.11.cpp  2.12.cpp  2.13.cpp  2.14.cpp  2.15.cpp  2.5.cpp  2.8.cpp  2.9.cpp  3.1.cpp  3.2.cpp  8.10.cpp  9.34.cpp  9.38.cpp  9.43.cpp  HeapSort.cpp  ZkUtils.cpp  a.c  a.cpp  ad_server_rect.cpp  b.h  b_test.cpp  biTree.cpp  binary_search.cpp  binary_tree.cpp  binary_tree.cpp-bak  bitset_operation.cpp  c.cpp  c_file.c  c_mkdir.cpp  chain_seq.cpp  clock.cpp  cv2_operation.cpp  d.cpp  e.cpp  equal_range.cpp  file.cpp  (+34 more)
cython/: test.py
cython/src/: setup.py
keras_code/cifar10/: saved_models  start-train.sh  train-cifar10.py  train-cifar10.py-1
mxnet_code/: draw_log.py  learning_mxnet.py  linear-regression.py  symbol_mxnet.py
node/: detection_util_http.js  http_client.js  http_server.js  test.js
pyTorch_code/: checkpoints  logs
pyTorch_code/mytest-cifar10/: myDataset.py  train_cifar10.py
pyTorch_code/pytorch-cifar/: logger.py  main.py  main2.py  main3.py  myDataset.py  nohup.out  run.sh  start-tensorboard.sh  transform.py  utils.py
pyTorch_code/pytorch-mnist/: main.py
python/: DownloadKeyWordImage.py  apiCount.py  apiCount2.py  b.py  class_property.py  class_variable.py  confuse-code-api.py  convertTovoc.py  crop_img.py  cv_process.py  drawHotMap.ipynb  extract_xml.py  flask_test.py  forever.py  iouCalculate.py  mail.py  matplot_test.py  objectDetect_server.py  opencv2_test.py  plot_box.py  pymongo.py  pymysql.py  queue.py  sem_test.py  semaphore.py  sendmail.py  subprocess_test.py  tcp_client.py  tcp_learn.py  tcp_server.py  test1.py  thread.py  time_convert.py  time_operation.py  tornado_test.py  udp_client.py  udp_server.py  url_1.py  url_2.py  visdom_demo.py  (+1 more)
python/.ipynb_checkpoints/: drawHotMap-checkpoint.ipynb
shell/: a.sh  b.sh  d.sh  e.sh  f.sh  g.sh  restart.sh  wget_url.sh
